# hf

./: .travis.yml  CMakeLists.txt  CONTRIBUTORS  README.md  SCF_Solver.cpp
b3/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
b3/src/: Makefile  cmake_install.cmake
b3/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/: ConfigureLibrary.cmake  ConfigureTest.cmake  FindPackages.cmake  InstallLibrary.cmake
docs/: CMakeLists.txt  h2o.xyz  hartree-fock.tex  hf.puml  hf.tex
in/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
in/src/: Makefile  cmake_install.cmake
in/tests/: CTestTestfile.cmake  Makefile
include/: BaseSCFSolver.hpp  DIISSCFSolver.hpp  PlainSCFSolver.hpp  RHF.hpp  RHFC.hpp  RHF_functions.hpp  SCFSolver.hpp  SCFSolverType.hpp  SCF_functions.hpp  common.hpp  hf.hpp  utility.hpp
src/: BaseSCFSolver.cpp  CMakeLists.txt  DIISSCFSolver.cpp  PlainSCFSolver.cpp  RHF.cpp  RHFC.cpp  RHF_functions.cpp  SCFSolver.cpp  SCF_functions.cpp  utility.cpp
tests/: CMakeLists.txt  RHFC_DIIS_test.cpp  RHF_DIISSCFSolver_test.cpp  RHF_DIIS_test.cpp  RHF_PlainSCFSolver_test.cpp  RHF_Plain_test.cpp  RHF_functions_test.cpp  RHF_test.cpp  RHF_tests.cpp  SCFSolver_test.cpp  SCF_functions_test.cpp
tests/not_needed/h2o_sto3g/: h2.py  h2o.py
tests/ref_data/: CO.xyz  FF.xyz  NN.xyz  NN_eq.xyz  NO.xyz  ch4_crawdad.xyz  h2_szabo.xyz  h2o_crawdad.xyz
tests/reference/: h2_631gdp.py  sto-6g.g94
tests/reference/h2o_sto3g/: h2.py  h2o.py  temp
tools/: HEADER  update_copyright_headers.py
